--- a/resources/i18n/en-us.ini
+++ b/resources/i18n/en-us.ini
@@ -1,18 +1,146 @@
-[system]
-internalErr = sorry fuck u
-unauthorized = you are unauthorized
+[repoEvent]
+create = Create
+update = Update
+deleteTemporarily = Delete temporarily
+deletePermanently = Delete permanently
+archived = Archived
+unArchived = UnArchived
+recoverFromRecycle = Recover from recycle
+
+[protectedBranchEvent]
+create = Create
+update = Update
+delete = Delete
+
+[pullRequestEvent]
+submit = Submit
+close = Close
+merge = Merge
+review = Review
+addComment = Add comment
+deleteComment = Delete comment
+
+[gitWorkflowEvent]
+create = Create
+update = Update
+delete = Delete
+trigger = Trigger
+kill = Kill
+
+[gitWorkflowVarsEvent]
+create = Create
+delete = Delete
+update = Update
+
+[gitWebhookEvent]
+create = Create
+delete = Delete
+update = Update
+
+[gitPushEvent]
+commit = Commit
+delete = Delete
+
+[teamEvent]
+create = Create
+delete = Delete
+update = Update
+
+[teamRoleEvent]
+create = Create
+delete = Delete
+update = Update
+
+[teamUserEvent]
+create = Create
+changeRole = Change role
+delete = Delete
 
 [timerEvent]
-delete = 删除
-create = 新增
-update = 编辑
-disable = 禁用
-enable = 启用
-manuallyTrigger = 手动触发
-
-[timerTask]
-success = 成功
-fail = 失败
+create = Create
+update = Update
+delete = Delete
+enable = Enable
+disable = Disable
+manuallyTrigger = Trigger manually
 
 [timerTaskEvent]
-fail = 失败提醒
+fail = Fail
+
+[appEvent]
+create = Create
+update = Update
+delete = Delete
+transfer = Transfer
+
+[appSourceEvent]
+managePropertySource = Manage property source
+manageServiceSource = Manage service source
+manageDiscoverySource = Manage discovery source
+
+[appPropertyFileEvent]
+create = Create
+delete = Delete
+
+[appPropertyVersionEvent]
+new = New Version
+deploy = Deploy Version
+
+[appDeployPipelineEvent]
+create = Create
+update = Update
+delete = Delete
+
+[appDeployPipelineVarsEvent]
+create = Create
+delete = Delete
+update = Update
+
+[appDeployPlanEvent]
+create = Create
+start = Start
+close = Close
+
+[appArtifactEvent]
+upload = Upload
+delete = Delete
+
+[appDiscoveryEvent]
+markAsUp = Mark as up
+markAsDown = Mark as down
+
+[appDeployServiceEvent]
+kill = Kill service
+restart = Restart service
+
+[appPromScrapeEvent]
+create = Create
+delete = Delete
+update = Update
+
+[appAlertConfigEvent]
+create = Create
+update = Update
+delete = Delete
+enable = Enable
+disable = Disable
+
+[weworkAccessTokenEvent]
+create = Create
+update = Update
+delete = Delete
+changeApiKey = Change api key
+refresh = Refresh
+
+[feishuAccessTokenEvent]
+create = Create
+update = Update
+delete = Delete
+changeApiKey = Change api key
+refresh = Refresh
+
+[notifyTplEvent]
+create = Create
+delete = Delete
+update = Update
+changeApiKey = Change api key
