--- a/resources/i18n/en-us.ini
+++ b/resources/i18n/en-us.ini
@@ -144,3 +144,73 @@ create = Create
 delete = Delete
 update = Update
 changeApiKey = Change api key
+
+[system]
+intervalErr = Internal error
+invalidArgs = Invalid arguments
+notLogin = Not login
+unauthorized = Permission denied
+forbidden = Operation denied
+proxyAbnormal = Proxy failed
+dataAlreadyExists = Data exists
+dataNotExists = Data does not exist
+unimplemented = Unimplemented
+operationFailed = Operation failed
+hasBug = System data error
+
+[user]
+notFound = User not found
+wrongPassword = Wrong password
+wrongOriginPassword = Wrong origin password
+alreadyExists = User exists
+emailAlreadyExists = Email exists
+
+[avatar]
+notImage = Not image
+
+[sshKey]
+formatError = Wrong ssh key format
+alreadyExists = Ssh key exists
+
+[cronExp]
+valueError = Wrong cron expression
+
+[gpgKey]
+formatError = Wrong gpg key format
+alreadyExists = Gpg key exists
+
+[team]
+adminUserGroupName = Administrator
+
+[repo]
+alreadyExists = Repository exists
+sizeExceedLimit = Size exceeds %s
+remainCountGreaterThanZero = Remain repositories is greater than zero
+
+[pullRequest]
+cannotMerge = Can not merge
+alreadyExists = Pull request exists
+reviewerCountLowerThanCfg = Review count is lower than configured count
+
+[protectedBranch]
+notAllowForcePush = Push denied
+notAllowDelete = Delete branch denied
+notAllowPush = Push denied
+
+[ssh]
+notSupportedCmd = Unsupported command
+
+[action]
+invalidContent = Invalid yaml
+
+[timerTask]
+remainCountGreaterThanZero = Remain timer task is greater than zero
+
+[app]
+remainCountGreaterThanZero = Remain application is greater than zero
+
+[sql]
+wrongSyntaxMsg = Wrong sql syntax
+unsupportedMsg = Unsupported sql
+notAllowHasLimit = Sql can not attach limit
+notAllowNoWhere = Sql does not contains where
