--- a/resources/i18n/zh-cn.ini
+++ b/resources/i18n/zh-cn.ini
@@ -144,3 +144,73 @@ create = 创建
 delete = 删除
 update = 编辑
 changeApiKey = 变更api密钥
+
+[system]
+intervalErr = 系统异常
+invalidArgs = 参数错误
+notLogin = 未登录
+unauthorized = 权限不足
+forbidden = 禁止操作
+proxyAbnormal = 代理执行异常
+dataAlreadyExists = 数据已存在
+dataNotExists = 数据不存在
+unimplemented = 未实现
+operationFailed = 操作失败
+hasBug = 系统数据异常
+
+[user]
+notFound = 用户不存在
+wrongPassword = 密码不正确
+wrongOriginPassword = 原密码不正确
+alreadyExists = 用户已存在
+emailAlreadyExists = 用户邮箱已存在
+
+[avatar]
+notImage = 不是图片
+
+[sshKey]
+formatError = ssh公钥格式错误
+alreadyExists = ssh公钥已存在
+
+[cronExp]
+valueError = cron表达式错误
+
+[gpgKey]
+formatError = gpg公钥格式错误
+alreadyExists = gpg公钥已存在
+
+[team]
+adminUserGroupName = 项目组管理员
+
+[repo]
+alreadyExists = 仓库已存在
+sizeExceedLimit = 大小超过上限%s
+remainCountGreaterThanZero = 仓库数量仍大于0
+
+[pullRequest]
+cannotMerge = 无法合并
+alreadyExists = 合并请求已存在
+reviewerCountLowerThanCfg = 代码评审数量小于配置数量
+
+[protectedBranch]
+notAllowForcePush = 保护分支禁止强制push
+notAllowDelete = 保护分支不可删除
+notAllowPush = 保护分支不可推送
+
+[ssh]
+notSupportedCmd = 不支持该命令
+
+[action]
+invalidContent = action yaml不合法
+
+[timerTask]
+remainCountGreaterThanZero = 定时任务数量仍大于0
+
+[app]
+remainCountGreaterThanZero = app数量仍大于0
+
+[sql]
+wrongSyntaxMsg = sql语法错误
+unsupportedMsg = 不支持该sql
+notAllowHasLimit = sql不允许带limit
+notAllowNoWhere = sql没有带where关键词
